<resources>
    <string name="app_name">FitAI</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding_title_1">Hedeflerinizi Belirleyin</string>
    <string name="onboarding_description_1">Sağlık hedeflerinizi bizimle paylaşın, hedeflerinize ulaşmanız için size özel bir yol haritası oluşturalım.</string>
    <string name="onboarding_title_2">Yapay zeka destekli beslenme programı</string>
    <string name="onboarding_description_2">Sağlık durumunuza ve hareketlerinize göre yapay zeka destekli beslenme planlarıyla tanışın.</string>
    <string name="onboarding_title_3">Kişiselleştirilmiş Antrenmanlar </string>
    <string name="onboarding_description_3">Aktivite seviyenize uygun, motive edici ve etkili antrenman programlarıyla formda kalın.</string>
    <string name="onboarding_title_4">Günlük\nKalori Takibi </string>
    <string name="onboarding_description_4">Günlük yediklerinizi kaydedin, kalori takibi ile sağlıklı alışkanlıklar edinin.</string>
    <string name="atla">Atla</string>
    <string name="sonraki">Sonraki</string>
    <string name="contentDescription">Image</string>
    <string name="register">Kayıt Ol</string>
    <string name="login">Giriş Yap</string>
    <string name="logout">Çıkış Yap</string>
    <string name="back_button">Back Button</string>
    <string name="close_button">Close Button</string>
    <string name="toolbar_logo">toolbar_logo</string>
    <string name="sign_up_title">Merhaba!\nBaşlamak için kaydolun</string>
    <string name="nickname">Kullanıcı Adı</string>
    <string name="email">Email</string>
    <string name="password">Parola</string>
    <string name="password_again">Parola Tekrar</string>
    <string name="or_register_with">Ve ya Şununla Kayıt Olun</string>
    <string name="or_login_with">Ve ya Şununla Giriş Yapın</string>
    <string name="zaten_hesab_n_z_var_m">Zaten hesabınız var mı?</string>
    <string name="terms">Şartları</string>
    <string name="and">ve</string>
    <string name="conditions">gizlilik politikasını</string>
    <string name="accept">kabul ediyorum.</string>
    <string name="apple_register_button">apple_register_button</string>
    <string name="google_register_button">google_register_button</string>
    <string name="facebook_register_button">facebook_register_button</string>
    <string name="what_is_your_height">Boyunuz kaç?</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="what_is_your_weight">Kilonuz kaç?</string>
    <string name="goal">Goal</string>
    <string name="what_is_your_weight_goal">Hedef kilonuz kaç?</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="cinsiyetiniz_nedir">Cinsiyetiniz nedir?</string>
    <string name="other_gender">Belirtmek istemiyorum</string>
    <string name="male_gender">Erkek</string>
    <string name="female_gender">Kadın</string>
    <string name="enter_birthday">Enter Your Birthday</string>
    <string name="all">Hepsi</string>
    <string name="eating_plan">Beslenme Planı Oluşturma</string>
    <string name="training_plan">Antreman Planı Oluşturma</string>
    <string name="healthy_life">Sağlıklı Yaşam</string>
    <string name="intermittent_fasting">Aralıklı Oruç</string>
    <string name="water_tracking">Su Takibi</string>
    <string name="which_plan_do_you_apply">Bu uygulamada hangi planları uygulamak istersiniz?</string>
    <string name="muscle_gain">Kas Kazanımı</string>
    <string name="weight_gain">Kilo Alma</string>
    <string name="weight_loss">Kilo Kaybı</string>
    <string name="what_is_your_goals">Hedefleriniz nelerdir?</string>
    <string name="what_are_your_preferred_sports">Tercih ettiğiniz spor aktiviteleri nelerdir?</string>
    <string name="how_often_would_like_sports">Hangi sıklıkla spor yapmak istersiniz?</string>
    <string name="as_much_as_offered">Bana önerilen kadar</string>
    <string name="on_two_times_week">Haftada 1–2</string>
    <string name="three_four_times_week">Haftada 3–4</string>
    <string name="five_six_times_week">Haftada 5–6</string>
    <string name="yoga">Yoga</string>
    <string name="fitness">Fitness</string>
    <string name="pilates">Pilates</string>
    <string name="running">Koşu</string>
    <string name="walking">Yürüyüş</string>
    <string name="what_are_body_part">Odaklanmak istediğiniz bölgeler nereler?</string>
    <string name="chest">Göğüs</string>
    <string name="hip">Kalça</string>
    <string name="belly_back">Bel ve Sırt</string>
    <string name="shoulder_arms">Omuz ve kollar</string>
    <string name="leg">Bacaklar</string>
    <string name="health_problem_hint">Gluten, laktoz…</string>
    <string name="do_you_know_other_problem">Bilinen başka sağlık sorununuz var mı?</string>
    <string name="which_foods_alergies">Hangi yiyeceklere alerjiniz var?</string>
    <string name="which_type_diet">Hangi tip diyet yapmak istersiniz?</string>
    <string name="celiac">Çölyak</string>
    <string name="diabetes_1">Diyabet Tip 1</string>
    <string name="diabetes_2">Diyabet Tip 2</string>
    <string name="tension">Tansiyon</string>
    <string name="intolerance_allergy">Intolerance / Allergy</string>
    <string name="traditional">Geleneksel</string>
    <string name="vegetarian">Vejetaryen</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Peskateryan</string>
    <string name="ketogenic">Ketojenik</string>
    <string name="how_describe_daily_movement">Günlük hareket durumunuzu nasıl tanımlarsınız?</string>
    <string name="how_many_hours_sleep">Günlük ortalama kaç saat uyursunuz?</string>
    <string name="how_many_glasses_water">Günlük ortalama kaç bardak su içersiniz?</string>
    <string name="a_water_glass_is_200ml">Bir su bardağı ortalama 200 ml’dir.</string>
    <string name="almost_never">Neredeyse hiç</string>
    <string name="rarely">Düşük seviyede</string>
    <string name="sometimes">Ortalama bir hareketliliğe sahibim</string>
    <string name="often">Elimden geldiğince hareket etmeye çalışırım</string>
    <string name="always">Fazladan hareket için vakit yaratırım</string>
    <string name="zero_six_hour">0 – 6 Saat</string>
    <string name="six_ten_hour">6 – 10 Saat</string>
    <string name="more_than_ten">10\'dan fazla</string>
    <string name="zero_one_liter">0 – 1 Litre</string>
    <string name="two_three_liter">2 – 3 Litre</string>
    <string name="more_than_three">4 – 5 Litre</string>
    <string name="radio_text">Radio Text</string>
    <string name="customized_plans_created">Size Özel Planlar Oluşturuluyor</string>
    <string name="personalized_plans_are_created_with_ai">Kişiselleştirilmiş planlarınız yapay zeka desteğiyle oluşturuluyor.</string>
    <string name="plans_creating">plans_creating</string>
    <string name="allergies">Alerjiler</string>
    <string name="health_problems">Sağlık Problemleri</string>
    <string name="lbs">lbs</string>
    <string name="what_is_your_birthday">Doğum gününüz nedir?</string>
    <string name="_2024">2024</string>
    <string name="_09">09</string>
    <string name="_29">29</string>
    <string name="calendar_icon">calendar_icon</string>
    <string name="ft">ft</string>
    <string name="onboarding_description_image">Onboarding description image</string>
    <string name="eeee">EEEE</string>
    <string name="dd">dd</string>
    <string name="welcome_message">Merhaba</string>
    <string name="create_plan">Plan Oluştur</string>
    <string name="create_plan_description">İstediğin alanda sana özel planlar oluştur.</string>
    <string name="nutrition_plan">Beslenme Planı</string>
    <string name="add_plan_button">add_plan_button</string>
    <string name="add_training_plan">Antrenman Planı</string>
    <string name="add_nutrition_plan">Beslenme Planı</string>
    <string name="water_tracker">Su Takibi</string>
    <string name="create_personal_program_with_ai">AI size özel plan oluştursun.</string>
    <string name="water_tracking_add">Su Takibi</string>
    <string name="created_for_you_powered_ai">Yapay zeka desteğiyle sana özel oluşturuldu.</string>
    <string name="indicator">indicator</string>
    <string name="is_your_number_not_correct">Numaranız doğru değil mi?</string>
    <string name="is_your_email_not_correct">E-postanız doğru değil mi?</string>
    <string name="login_with_email">E-postayla Giriş Yap</string>
    <string name="login_with_phone">Numarayla Giriş Yap</string>
    <string name="verification">Doğrulama</string>
    <string name="verification_code">nolu numaranıza</string>
    <string name="verification_code_bottom">gönderdiğimiz doğrulama kodunu girin.</string>
    <string name="didnt_you_get_a_code">Kod almadınız mı?</string>
    <string name="resend_code">Tekrar Gönder</string>
    <string name="timer">01:00</string>
    <string name="blank">&#32;</string>
    <string name="reset_password">Parolayı Sıfırla</string>
    <string name="create_new_password">Yeni parola oluştur</string>
    <string name="create_new_password_bottom">Yeni parolanız daha önce kullandıklarınızdan\nfarklı olmalıdır.</string>
    <string name="password_changed">Parola Değiştirildi!</string>
    <string name="password_changed_bottom">Parolanız başarıyla değiştirildi. Yeni\nparalonızla hesabınıza giriş yapabilirsiniz.</string>
    <string name="otp_email">E-posta adresinize gönderdiğimiz doğrulama\nkodunu girin.</string>
    <string name="send_code">Kod Gönder</string>
    <string name="welcome">Hoş geldin!</string>
    <string name="are_you_forgot_password">Şifrenizi mi unuttunuz?</string>
    <string name="are_you_forgot_password_bottom">Endişelenmeyin! Hesabınızla bağlantılı\nnumaranız doğruysa onaylayın</string>
    <string name="are_you_forgot_password_email_bottom">Endişelenmeyin!  Lütfen hesabınızla bağlantılı\ne-posta adresini girin.</string>
    <string name="phone">+ (90) 535 0** ** **</string>
    <string name="password_confirm">Parola Tekrar</string>
    <string name="remember_me">Beni Hatırla</string>
    <string name="forgot_password">Şifremi Unuttum</string>
    <string name="dont_have_an_account">Hesabın yok mu?</string>
    <string name="remember_the_password">Şifreyi Hatırladın mı?</string>
    <string name="daily_training">Günlük Antrenmanlar</string>
    <string name="profile">Profil</string>
    <string name="profile_text">Profile Item</string>
    <string name="default_name">Jane Doe</string>
    <string name="date_of_joining">5 Mayıs 2024</string>
    <string name="date_of_joining_end">’ten beri üye</string>
    <string name="goal_tr">Hedef</string>
    <string name="goal_detail">Kilo Verme,Kas Yapma</string>
    <string name="badges">Rozetler</string>
    <string name="personalization">Kişiselleştir</string>
    <string name="connected_accounts">Bağlantılı Hesaplar</string>
    <string name="track">Takip</string>
    <string name="notification">Bildirim</string>
    <string name="support">Destek</string>
    <string name="legal">Yasal</string>
    <string name="theme">Tema</string>
    <string name="system">Sistem</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="confirm">Onayla</string>
    <string name="loading">Loading</string>
    <string name="register_for_healty_life">Sağlıklı yaşama adım atmak için kayıt olun</string>
    <string name="make_done">Tamamla</string>
    <string name="do_you_have_health_problem">Bilinen sağlık sorununuz var mı?</string>
    <string name="nutrition_plan_please_answer">Size özel beslenme planınızı oluşturmamız için kişisel bilgilerinize ihtiyacımız var.\nLütfen soruları cevaplayın.</string>
    <string name="training_plan_please_answer">Size özel antrenma planınızı oluşturmamız için kişisel bilgilerinize ihtiyacımız var.\nLütfen soruları cevaplayın.</string>
    <string name="training_plan_ai_powered">AI Destekli\nAntreman Planı</string>
    <string name="wrong_code">Yanlış kod, lütfen tekrar deneyin</string>
</resources>