<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/mainConstraintLayoutStyle"
    tools:context=".login.sign_up.screens.GoalSignUpFragment">

    <TextView
        android:id="@+id/weight_goal_title"
        style="@style/titleTextStyle"
        android:text="@string/what_is_your_weight_goal" />

    <RadioGroup
        android:id="@+id/radio_group_weight_goal"
        style="@style/radioGroupStyle"
        android:layout_below="@id/weight_goal_title"
        android:checkedButton="@+id/radio_button_kg_goal">

        <RadioButton
            android:id="@+id/radio_button_lbs_goal"
            style="@style/radioButtonStyle"
            android:text="@string/lbs" />

        <RadioButton
            android:id="@+id/radio_button_kg_goal"
            style="@style/radioButtonStyle"
            android:text="@string/kg"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/ll_weight_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group_weight_goal"
        android:layout_marginTop="@dimen/_48sp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_weight_goal"
            style="@style/textViewPersonalInfoStyle"
            android:hint="@string/goal" />

        <TextView
            style="@style/textViewPersonalInfoUnitStyle"
            android:text="@string/kg" />

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_below="@id/ll_weight_goal"
        android:layout_marginHorizontal="@dimen/_24dp"
        android:layout_marginTop="@dimen/_12dp"
        app:dividerColor="@color/light_grey_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_weight_goal_continue"
        style="@style/nextButtonStyle"
        android:text="@string/sonraki"
        app:cornerRadius="@dimen/button_corner_radius" />

</RelativeLayout>