<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".presentation.home.screens.IntroductionFragment">

    <ImageView
        android:id="@+id/iv_introduction_image"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:layout_above="@+id/tv_introduction_title"
        android:layout_marginBottom="@dimen/_4dp"
        android:contentDescription="@string/plans_creating"
        android:src="@drawable/ic_circle_selected"
        app:tint="@color/light_grey_5" />

    <TextView
        android:id="@+id/tv_introduction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/urbanist_bold"
        android:maxEms="10"
        android:text="@string/training_plan_ai_powered"
        android:textAlignment="center"
        android:textSize="@dimen/_26sp" />

    <TextView
        android:id="@+id/introduction_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_introduction_title"
        android:layout_marginVertical="@dimen/_8dp"
        android:fontFamily="@font/urbanist_light"
        android:layout_marginHorizontal="24dp"
        android:text="@string/nutrition_plan_please_answer"
        android:textAlignment="center"
        android:textSize="@dimen/_16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_introduction_continue"
        style="@style/nextButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/_48dp"
        android:paddingVertical="@dimen/_16dp"
        android:text="@string/sonraki"
        app:cornerRadius="@dimen/button_corner_radius" />

</RelativeLayout>