<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.sign_in.OTPFragment"
    android:background="@color/white">

    <include
        android:id="@+id/toolbar_otp_phone"
        layout="@layout/toolbar_sign_up"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/verification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/verification"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginHorizontal="@dimen/_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_otp_phone" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="18sp"
        android:fontFamily="@font/urbanist_regular"
        android:textColor="@color/lightGray"
        android:layout_marginHorizontal="@dimen/_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verification"
        android:layout_marginTop="@dimen/_10dp" />


    <TextView
        android:id="@+id/verificationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_code"
        android:textSize="18sp"
        android:fontFamily="@font/urbanist_regular"
        android:textColor="@color/lightGray"
        app:layout_constraintStart_toEndOf="@id/phone"
        app:layout_constraintTop_toBottomOf="@id/verification"
        android:layout_marginStart="5dp"
        android:layout_marginTop="@dimen/_10dp"
        />

    <TextView
        android:id="@+id/dogrulamaText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_code_bottom"
        android:textSize="18sp"
        android:fontFamily="@font/urbanist_regular"
        android:textColor="@color/lightGray"
        android:layout_marginHorizontal="@dimen/_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verificationText"
        />

    <EditText
        android:id="@+id/etOtpBox"
        style="@style/otpBoxStyle"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/_32dp"
        android:autofillHints="number"
        android:hint="@string/blank"
        android:textColorHint="@color/white"
        android:maxEms="10"
        android:background="@drawable/bg_grey_light_radius"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/etOtpBox2"
        android:layout_marginStart="@dimen/_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dogrulamaText2"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/etOtpBox2"
        style="@style/otpBoxStyle"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/_32dp"
        android:autofillHints="number"
        android:hint="@string/blank"
        android:maxEms="10"
        android:background="@drawable/bg_grey_light_radius"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/etOtpBox3"
        app:layout_constraintStart_toEndOf="@id/etOtpBox"
        app:layout_constraintTop_toBottomOf="@id/dogrulamaText2" />

    <EditText
        android:id="@+id/etOtpBox3"
        style="@style/otpBoxStyle"
        android:layout_width="70dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/dogrulamaText2"
        app:layout_constraintStart_toEndOf="@id/etOtpBox2"
        app:layout_constraintEnd_toStartOf="@id/etOtpBox4"
        android:layout_marginTop="@dimen/_32dp"
        android:autofillHints="number"
        android:hint="@string/blank"
        android:background="@drawable/bg_grey_light_radius"
        android:textColorHint="@color/white"
        android:textAlignment="center"
        android:maxEms="10" />

    <EditText
        android:id="@+id/etOtpBox4"
        style="@style/otpBoxStyle"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/_32dp"
        android:autofillHints="number"
        android:hint="@string/blank"
        android:maxEms="10"
        android:textAlignment="center"
        android:background="@drawable/bg_grey_light_radius"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_24dp"
        app:layout_constraintStart_toEndOf="@id/etOtpBox3"
        app:layout_constraintTop_toBottomOf="@id/dogrulamaText2" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etOtpBox2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/wrong_code"
        android:textColor="@color/red_50"
        android:visibility="invisible"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_24dp"/>

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvError"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/timer"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_4dp"/>

    <TextView
        android:id="@+id/tvDidntYouGetACode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_regular"
        app:layout_constraintTop_toBottomOf="@id/tvTimer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/didnt_you_get_a_code"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_4dp"/>

    <TextView
        android:id="@+id/tvResendCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_bold"
        app:layout_constraintTop_toBottomOf="@id/tvDidntYouGetACode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/resend_code"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="@dimen/_4dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>