<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.ForgotPasswordFragment">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sifreniMiUnuttun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_forgot_password"
        android:textSize="30sp"
        android:fontFamily="@font/urbanist_bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontalTop"
        />

    <TextView
        android:id="@+id/sifreniMiUnuttunBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_forgot_password_email_bottom"
        android:textSize="18sp"
        android:fontFamily="@font/urbanist_regular"
        android:textColor="@color/lightGray"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintTop_toBottomOf="@id/sifreniMiUnuttun"
        android:layout_marginTop="@dimen/_10dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgotPasswordPhone"
        android:hint="@string/email"
        android:layout_width="0dp"
        android:layout_height="65dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:shapeAppearanceOverlay="@style/Button4"
        app:boxStrokeColor="@color/black"
        android:textColorHint="#8391A1"
        app:boxStrokeWidth="1dp"
        app:layout_constraintTop_toBottomOf="@id/sifreniMiUnuttunBottom"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
        android:layout_marginTop="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textEmailAddress"
            android:ems="10"
            android:fontFamily="@font/urbanist_semibold"
            android:textSize="15sp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerButton"
        style="@style/darkButtonStyle"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordPhone"
        android:text="@string/send_code"
        android:layout_marginTop="24dp"
        />

    <TextView
        android:id="@+id/hesabinYokMu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_the_password"
        android:textSize="18sp"
        android:fontFamily="@font/urbanist_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalLeft"
        app:layout_constraintEnd_toEndOf="@id/kayitOl"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginBottom="26dp"
        />

    <TextView
        android:id="@+id/kayitOl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/hesabinYokMu"
        android:layout_marginStart="5dp"
        android:textSize="18sp"
        android:fontFamily="@font/urbanist_semibold"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginBottom="26dp"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="100dp" />


</androidx.constraintlayout.widget.ConstraintLayout>